// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 131263,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 131167,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 278188,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 294970,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 308296,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 294367,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 212590,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 212466,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 266906,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 211601,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 368312,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 211432,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 346461,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 309872,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 288129,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 170519,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 189475,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 226220,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 195326,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 226288,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 195279,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 374100,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 260121,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 358873,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 250644,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 289131,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 264520,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 292494,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 369715,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 389736,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 337391,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 384932,
}
`;
